--- a/portfolio-assignment1.html
+++ b/portfolio-assignment1.html
@@ -96,6 +96,13 @@
     <br>
     <br> 
 
+     <h3 style= "font-family: Arial, Helvetica, sans-serif; color: #6F4040;"><b><i>&nbsp;&nbsp; 
+      This Is Me :</b></i></h3>
+    
+    <img src="photo.JPG" title="Mandy">
+
+    <br>
+
     <h3 style= "font-family: Arial, Helvetica, sans-serif; color: #6F4040;"><b><i>&nbsp;&nbsp; <img src="edu.png" width="35px" height="35px"> 
       My Education :</b></i></h3>
       <ol> 
